# wdb-MC

./: .coverage  .gitignore  .ruff.toml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/: hltb_games.csv
hltb-scraper/: docker-compose.yml
hltb-scraper/notebooks/: eda.html  eda.ipynb
hltb-scraper/scraper/: __init__.py  scraper.py  utils.py
notebooks/: eda.ipynb  eda_executed.ipynb
scraper/: __init__.py  config.py  scraper.py  utils.py
tests/: __init__.py  test_scraper.py  test_utils.py
